--- a/public/jp/index.html
+++ b/public/jp/index.html
@@ -29,6 +29,7 @@
         <canvas id="animation" class="fill-screen"></canvas>
         <canvas id="overlay" class="fill-screen"></canvas>
         <svg id="foreground" class="fill-screen" xmlns="http://www.w3.org/2000/svg" version="1.1"></svg>
+        <svg id="scrubber" class="fill-screen" xmlns="http://www.w3.org/2000/svg" version="1.1"></svg>
     </div>
     <div id="details">
         <p id="status"></p>
