--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,11 @@
     </div>
     <div id="details">
         <p id="status"></p>
+        <p id="earth">
+            <span id="show-menu" class="text-button" title="menu">Display Settings</span>
+            <span id="progress" class="invisible"></span>
+        </p>
+
         <div id="location">
             <p>
                 <span id="location-coord"></span>
@@ -47,11 +52,6 @@
                 <span id="location-value-units" class="text-button"></span>
             </p>
         </div>
-
-        <p id="earth">
-            <span id="show-menu" class="text-button" title="menu">rocketearth</span>
-            <span id="progress" class="invisible"></span>
-        </p>
 
         <div id="menu" class="invisible">
             <p>Date | <span
