--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <meta property="og:image"       content="http://earth.nullschool.net/preview.jpg"/>
 
     <link rel="shortcut icon" href="/favicon/favicon.ico"/>
-    <link rel="apple-touch-icon" sizes="120x120" href="/iphone-icon.png"/>
-    <link rel="apple-touch-icon" sizes="152x152" href="/ipad-icon.png"/>
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon.png"/>
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png"/>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css"/>
 
     <link rel="alternate" hreflang="x-default" href="http://earth.nullschool.net/"/>
