Ipad/iphone favicons

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <meta property="og:url"         content="https://rocketearth.app"/>    
 
     <link rel="shortcut icon" href="/favicon/favicon.ico"/>
-    <link rel="apple-touch-icon" sizes="120x120" href="/iphone-icon.png"/>
-    <link rel="apple-touch-icon" sizes="152x152" href="/ipad-icon.png"/>
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon.png"/>
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png"/>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css"/>
     <link rel="alternate" hreflang="x-default" href="https://rocketearth.app/"/>
 </head>
