--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html itemscope itemtype="http://schema.org/Map" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 <head>
     <meta charset="utf-8"/>
@@ -13,7 +13,7 @@
 
     <link rel="shortcut icon" href="/favicon/favicon.ico"/>
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon.png"/>
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png"/>
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-icon-152x152.png"/>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css"/>
     <link rel="alternate" hreflang="x-default" href="https://rocketearth.app/"/>
 </head>
@@ -83,8 +83,7 @@
             <p>No Data</p>
         </div>
         <div id="menu" class="invisible">
-            <p>Date | <span id="data-date" class="local"></span> <span id="toggle-zone" class="text-button"></span>
-            </p>
+            <p>Date | <span id="data-date" class="local"></span> <span id="toggle-zone" class="text-button"></span></p>
             <p>Data | <span id="data-layer"></span></p>
             <p>Source | <span id="data-center"></span></p>
             <p>Control | <span
